tests/compile-fail/panic/panic_abort3.stderr
thread 'main' panicked at 'panicking from libcore', $DIR/panic_abort3.rs:LL:CC
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: abnormal termination: the program aborted execution
   |
   = note: inside `panic_abort::__rust_start_panic::abort` at rustc_src/src/lib.rs:LL:CC
   = note: inside `panic_abort::__rust_start_panic` at rustc_src/src/lib.rs:LL:CC
   = note: inside `std::panicking::rust_panic` at rustc_src/src/panicking.rs:LL:CC
   = note: inside `std::panicking::rust_panic_with_hook` at rustc_src/src/panicking.rs:LL:CC
   = note: inside closure at rustc_src/src/panicking.rs:LL:CC
   = note: inside `std::sys_common::backtrace::__rust_end_short_backtrace::<[closure@std::panicking::begin_panic_handler::{closure#0}], !>` at rustc_src/src/sys_common/backtrace.rs:LL:CC
   = note: inside `std::panicking::begin_panic_handler` at rustc_src/src/panicking.rs:LL:CC
   = note: inside `std::rt::panic_fmt` at rustc_src/src/panicking.rs:LL:CC
   = note: inside `core::panicking::panic` at rustc_src/src/panicking.rs:LL:CC
note: inside `main` at rustc_src/src/panic.rs:LL:CC
  --> $DIR/panic_abort3.rs:LL:CC
   |
LL |     core::panic!("panicking from libcore");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

